libneoada/parser.cc

#include "parser.h"
#include "exception.h"
#include "variant.h"
#include <cassert>
#include <unordered_set>

//-------------------------------------------------------------------------------------------------
NdaParser::NdaParser(NdaLexer &lexer)
    : mLexer(lexer)
{
}

//-------------------------------------------------------------------------------------------------
NdaParser::ASTNodePtr NdaParser::parse(const std::string &script) {

    mLexer.setScript(script);

    auto programNode = std::make_shared<ASTNode>(ASTNodeType::Program, mLexer.line(), mLexer.column());
    while (mLexer.nextToken()) {
        auto declarationNode = parseStatement();
        if (declarationNode)
            ASTNode::addChild(programNode,declarationNode);
    }

    return programNode;
}

//-------------------------------------------------------------------------------------------------
NdaParser::ASTNodePtr NdaParser::parseFormula(const std::string &formula)
{
    mLexer.setScript(formula);

    auto programNode = std::make_shared<ASTNode>(ASTNodeType::Program, mLexer.line(), mLexer.column());
    if (!mLexer.nextToken())
        throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());

    auto returnNode = std::make_shared<ASTNode>(ASTNodeType::Return, mLexer.line(), mLexer.column());
    ASTNode::addChild(returnNode,parseExpression());
    ASTNode::addChild(programNode,returnNode);

    if (mLexer.nextToken())
        throw NdaException(Nada::Error::InvalidStatement,mLexer.line(), mLexer.column(),mLexer.token());

    return programNode;
}

//-------------------------------------------------------------------------------------------------
NdaParser::ASTNodePtr NdaParser::parseStatement()
{
    if (mLexer.tokenType() == NdaLexer::TokenType::Keyword && mLexer.token() == "declare") {
        return parseSeparator(parseDeclaration());
    } else if (mLexer.tokenType() == NdaLexer::TokenType::Keyword && mLexer.token() == "volatile") {
        return parseSeparator(parseDeclaration());
    }else if (mLexer.tokenType() == NdaLexer::TokenType::Keyword && mLexer.token() == "while") {
        return parseSeparator(parseWhileLoop());
    } else if (mLexer.tokenType() == NdaLexer::TokenType::Keyword && mLexer.token() == "for") {
        return parseSeparator(parseForLoop());
    } else if (mLexer.tokenType() == NdaLexer::TokenType::Keyword && mLexer.token() == "if") {
        return parseSeparator(parseIfStatement());
    } else if (mLexer.tokenType() == NdaLexer::TokenType::Keyword && mLexer.token() == "case") {
        return parseSeparator(parseCaseStatement());
    } else if (mLexer.tokenType() == NdaLexer::TokenType::Keyword && mLexer.token() == "begin") {
        return parseSeparator(parseBlockStatement());
    } else if (mLexer.tokenType() == NdaLexer::TokenType::Keyword && mLexer.token() == "return") {
        return parseSeparator(parseReturn());
    } else if (mLexer.tokenType() == NdaLexer::TokenType::Keyword && mLexer.token() == "raise") {
        return parseSeparator(parseRaise());
    } else if (mLexer.tokenType() == NdaLexer::TokenType::Keyword && mLexer.token() == "break") {
        return parseSeparator(parseBreak());
    } else if (mLexer.tokenType() == NdaLexer::TokenType::Keyword && mLexer.token() == "continue") {
        return parseSeparator(parseContinue());
    } else if (mLexer.tokenType() == NdaLexer::TokenType::Keyword && mLexer.token() == "procedure") {
        return parseSeparator(parseProcedureOrFunction());
    } else if (mLexer.tokenType() == NdaLexer::TokenType::Keyword && mLexer.token() == "function") {
        return parseSeparator(parseProcedureOrFunction());
    } else if (mLexer.tokenType() == NdaLexer::TokenType::Keyword && mLexer.token() == "with") {
        return parseSeparator(parseWith());
    } else if (mLexer.tokenType() == NdaLexer::TokenType::Keyword && mLexer.token() == "type") {
        return parseSeparator(parseType());
    } else if (mLexer.tokenType() == NdaLexer::TokenType::Identifier) {
        return parseSeparator(parseIdentifier());
    }

    if (mLexer.atEnd())
        throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());
    throw NdaException(Nada::Error::InvalidStatement,mLexer.line(), mLexer.column(),mLexer.token());
    return NdaParser::ASTNodePtr();
}

//-------------------------------------------------------------------------------------------------
NdaParser::ASTNodePtr cloneAstNode(const NdaParser::ASTNodePtr &node)
{
    auto copy = std::make_shared<NdaParser::ASTNode>(node->type, node->line, node->column, node->value.displayValue);
    for (const auto &child : node->children)
        NdaParser::ASTNode::addChild(copy,cloneAstNode(child));
    return copy;
}

NdaParser::ASTNodePtr makeDeclarationNode(NdaParser::ASTNodeType declarationType,
                                          const std::string &name,
                                          const std::string &typeName,
                                          const NdaParser::ASTNodePtr &expressionNode,
                                          int line,
                                          int column)
{
    auto declarationNode = std::make_shared<NdaParser::ASTNode>(declarationType,line,column,name);
    auto typeNode = std::make_shared<NdaParser::ASTNode>(NdaParser::ASTNodeType::Identifier,line,column,typeName);
    NdaParser::ASTNode::addChild(declarationNode,typeNode);
    if (expressionNode)
        NdaParser::ASTNode::addChild(declarationNode,cloneAstNode(expressionNode));
    return declarationNode;
}


NdaParser::ASTNodePtr makeFormalParameterNode(const std::string &name,
                                              const std::string &typeName,
                                              const std::string &mode,
                                              int line,
                                              int column)
{
    auto parameterNode = std::make_shared<NdaParser::ASTNode>(NdaParser::ASTNodeType::FormalParameter,line,column,name);
    auto parameterType = std::make_shared<NdaParser::ASTNode>(NdaParser::ASTNodeType::Identifier,line,column,typeName);
    NdaParser::ASTNode::addChild(parameterNode,parameterType);

    if (!mode.empty()) {
        auto parameterMode = std::make_shared<NdaParser::ASTNode>(NdaParser::ASTNodeType::FormalParameterMode,line,column,mode);
        NdaParser::ASTNode::addChild(parameterNode,parameterMode);
    }

    return parameterNode;
}


bool staticCaseChoiceKey(const NdaParser::ASTNodePtr &choiceNode, std::string &key)
{
    if (!choiceNode || !choiceNode->children.empty())
        return false;

    switch (choiceNode->type) {
    case NdaParser::ASTNodeType::Number:
        key = "number:" + choiceNode->value.lowerValue;
        return true;
    case NdaParser::ASTNodeType::BooleanLiteral:
        key = "bool:" + choiceNode->value.lowerValue;
        return true;
    case NdaParser::ASTNodeType::Literal:
        key = "string:" + choiceNode->value.displayValue;
        return true;
    default:
        return false;
    }
}

//-------------------------------------------------------------------------------------------------
NdaParser::ASTNodePtr NdaParser::parseDeclaration()
{
    bool isVolatile = mLexer.token() == "volatile";
    auto declarationType = isVolatile ? ASTNodeType::VolatileDeclaration : ASTNodeType::Declaration;

    mLexer.nextToken(); // skip "declare" / "volatile"

    if (mLexer.tokenType() != NdaLexer::TokenType::Identifier)
        throw NdaException(Nada::Error::IdentifierExpected,mLexer.line(), mLexer.column(),mLexer.token());

    std::vector<std::string> names;
    int line = mLexer.line();
    int column = mLexer.column();

    while (true) {
        if (mLexer.tokenType() != NdaLexer::TokenType::Identifier)
            throw NdaException(Nada::Error::IdentifierExpected,mLexer.line(), mLexer.column(),mLexer.token());

        names.push_back(mLexer.token());
        mLexer.nextToken();

        if (mLexer.token() != ",")
            break;
        mLexer.nextToken();
    }

    if (mLexer.token() != ":")
        throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token());

    mLexer.nextToken(); // skip ':'

    if (mLexer.tokenType() != NdaLexer::TokenType::Identifier)
        throw NdaException(Nada::Error::IdentifierExpected,mLexer.line(), mLexer.column(),mLexer.token());

    std::string typeName = mLexer.token();
    ASTNodePtr expressionNode;

    if (mLexer.token(1) == ":=") {
        mLexer.nextToken();       // jump to   ":="
        if (!mLexer.nextToken())  // jump after ":="
            throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());

        expressionNode = parseExpression();
        if (!expressionNode)
            return NdaParser::ASTNodePtr();
    }

    if (names.size() == 1)
        return makeDeclarationNode(declarationType,names[0],typeName,expressionNode,line,column);

    auto groupNode = std::make_shared<ASTNode>(ASTNodeType::DeclarationGroup,line,column);
    for (const auto &name : names)
        ASTNode::addChild(groupNode,makeDeclarationNode(declarationType,name,typeName,expressionNode,line,column));
    return groupNode;
}

//-------------------------------------------------------------------------------------------------
NdaParser::ASTNodePtr NdaParser::parseLocalDeclaration()
{
    if (mLexer.tokenType() != NdaLexer::TokenType::Identifier)
        throw NdaException(Nada::Error::IdentifierExpected,mLexer.line(), mLexer.column(),mLexer.token());

    std::vector<std::string> names;
    int line = mLexer.line();
    int column = mLexer.column();

    while (true) {
        if (mLexer.tokenType() != NdaLexer::TokenType::Identifier)
            throw NdaException(Nada::Error::IdentifierExpected,mLexer.line(), mLexer.column(),mLexer.token());

        names.push_back(mLexer.token());
        mLexer.nextToken();

        if (mLexer.token() != ",")
            break;
        mLexer.nextToken();
    }

    if (mLexer.token() != ":")
        throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token());

    mLexer.nextToken();

    if (mLexer.tokenType() != NdaLexer::TokenType::Identifier)
        throw NdaException(Nada::Error::IdentifierExpected,mLexer.line(), mLexer.column(),mLexer.token());

    std::string typeName = mLexer.token();
    ASTNodePtr expressionNode;

    if (mLexer.token(1) == ":=") {
        mLexer.nextToken();
        if (!mLexer.nextToken())
            throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());

        expressionNode = parseExpression();
        if (!expressionNode)
            return NdaParser::ASTNodePtr();
    }

    if (names.size() == 1)
        return makeDeclarationNode(ASTNodeType::Declaration,names[0],typeName,expressionNode,line,column);

    auto groupNode = std::make_shared<ASTNode>(ASTNodeType::DeclarationGroup,line,column);
    for (const auto &name : names)
        ASTNode::addChild(groupNode,makeDeclarationNode(ASTNodeType::Declaration,name,typeName,expressionNode,line,column));
    return groupNode;
}

//-------------------------------------------------------------------------------------------------
NdaParser::ASTNodePtr NdaParser::parseWith()
{
    std::string addonName;

    NdaLexer::TokenType nextNode = NdaLexer::TokenType::Identifier;

    while (mLexer.token(1) != ";") {
        mLexer.nextToken();
        if (mLexer.tokenType() != nextNode)
            throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token());
        if (nextNode == NdaLexer::TokenType::Identifier) {
            addonName = addonName + mLexer.token();
            nextNode = NdaLexer::TokenType::Separator;
        } else if (mLexer.token() == ".") {
            addonName = addonName + ".";
            nextNode = NdaLexer::TokenType::Identifier;
        } else
            throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token());
    }

    auto withNode = std::make_shared<ASTNode>(ASTNodeType::WithAddon,mLexer.line(), mLexer.column(), addonName);
    return withNode;
}

//-------------------------------------------------------------------------------------------------
NdaParser::ASTNodePtr NdaParser::parseType()
{
    std::string typeName;
    std::string baseName;


    NdaLexer::TokenType nextNode = NdaLexer::TokenType::Identifier;

    // type File is Number;

    if (!mLexer.nextToken())
        throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());

    if (mLexer.tokenType() != NdaLexer::TokenType::Identifier)
        throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token());

    typeName = mLexer.token();

    if (!mLexer.nextToken())
        throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());

    if (mLexer.token() != "is")
        throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token());

    if (!mLexer.nextToken())
        throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());

    if (mLexer.tokenType() != NdaLexer::TokenType::Identifier)
        throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token());


    baseName = mLexer.token();

    auto typeNode = std::make_shared<ASTNode>(ASTNodeType::TypeDefinition,mLexer.line(), mLexer.column(), typeName);
    auto baseNode = std::make_shared<ASTNode>(ASTNodeType::Identifier,mLexer.line(), mLexer.column(), baseName);
    ASTNode::addChild(typeNode,baseNode);

    /*
    while (mLexer.token(1) != ";") {
        mLexer.nextToken();
        if (mLexer.tokenType() != nextNode)
            throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token());
        if (nextNode == NdaLexer::TokenType::Identifier) {
            addonName = addonName + mLexer.token();
            nextNode = NdaLexer::TokenType::Separator;
        } else if (mLexer.token() == ".") {
            addonName = addonName + ".";
            nextNode = NdaLexer::TokenType::Identifier;
        } else
            throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token());
    }
    */


    return typeNode;
}

//-------------------------------------------------------------------------------------------------
NdaParser::ASTNodePtr NdaParser::parseIdentifier()
{
    auto identifierNode = std::make_shared<ASTNode>(ASTNodeType::Identifier,mLexer.line(), mLexer.column(), mLexer.token());

    if (handleIdentifierCall(identifierNode)) {
        while (true) {
            if (handleIdentifierCall(identifierNode)) {
            }
            else if (handleIdentifierAccess(identifierNode)) {
            }
            else {
                break;
            }
        }
        return identifierNode;
    }

    while (handleIdentifierAccess(identifierNode)) {
    }

    mLexer.nextToken();

    if (mLexer.token() == ":=") {
        auto assignmentNode = std::make_shared<ASTNode>(ASTNodeType::Assignment,mLexer.line(), mLexer.column(), mLexer.token());

        if (!mLexer.nextToken())
            throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());

        auto expressionNode = parseExpression();
        if (!expressionNode)
            return NdaParser::ASTNodePtr();

        ASTNode::addChild(assignmentNode,identifierNode);
        ASTNode::addChild(assignmentNode,expressionNode);

        return assignmentNode;

    } else {
        throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token());
    }
    return identifierNode;
}

//-------------------------------------------------------------------------------------------------
NdaParser::ASTNodePtr NdaParser::parseProcedureOrFunction()

//                         for procedures AND functions

{
    bool isFunction = mLexer.token() == "function";

    auto procedureNode = std::make_shared<ASTNode>(isFunction ? ASTNodeType::Function :
                                                                ASTNodeType::Procedure,
                                                    mLexer.line(), mLexer.column(),
                                                    mLexer.token());

    if (!mLexer.nextToken())
        throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column());

    if (mLexer.tokenType() != NdaLexer::TokenType::Identifier)
        throw NdaException(Nada::Error::IdentifierExpected,mLexer.line(), mLexer.column(),mLexer.token());

    bool isMethod = mLexer.token(1) == ":";

    if (isMethod) {
        auto typeNode = std::make_shared<ASTNode>(ASTNodeType::MethodContext, mLexer.line(), mLexer.column(), mLexer.token());
        ASTNode::addChild(procedureNode,typeNode);
        mLexer.nextToken();      // to ":"
        if (!mLexer.nextToken()) // to method-name
            throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column());
    }
    procedureNode->value = mLexer.token();

    if (!mLexer.nextToken())
        throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column());

    auto parameterNode = parseFormalParameterList();
    ASTNode::addChild(procedureNode,parameterNode);

    if (isFunction) {
        // function Add(a : in Natural; b : in Natural) return Natural is
        //                                                |       |
        if (mLexer.token() != "return")
            throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token());
        mLexer.nextToken();

        if (mLexer.tokenType() != NdaLexer::TokenType::Identifier)
            throw NdaException(Nada::Error::IdentifierExpected,mLexer.line(), mLexer.column(),mLexer.token());

        auto returnNode = std::make_shared<ASTNode>(ASTNodeType::ReturnType, mLexer.line(), mLexer.column(), mLexer.token());
        ASTNode::addChild(procedureNode,returnNode);

        mLexer.nextToken();
    }

    if (mLexer.token() != "is")
        throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token());

    if (!mLexer.nextToken())
        throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column());


    std::vector<ASTNodePtr> localDeclarations;
    while (mLexer.tokenType() == NdaLexer::TokenType::Identifier &&
           (mLexer.token(1) == ":" || mLexer.token(1) == ",")) {
        localDeclarations.push_back(parseSeparator(parseLocalDeclaration()));
        if (!mLexer.nextToken())
            throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());
    }

    if (mLexer.token() != "begin")
        throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token());
    mLexer.nextToken();

    auto blockNode = parseBlockEnd("exception", "finally");
    for (auto it = localDeclarations.rbegin(); it != localDeclarations.rend(); ++it)
        ASTNode::prependChild(blockNode,*it);
    if (mLexer.token() == "exception")
        ASTNode::addChild(blockNode,parseExceptionHandlers());
    if (mLexer.token() == "finally")
        ASTNode::addChild(blockNode,parseFinallyBlock());

    if (mLexer.token(1) != ";") {
        if (mLexer.tokenType(1) != NdaLexer::TokenType::Identifier)
            throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token(1));

        if (!mLexer.nextToken())
            throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());

        if (Nda::toLower(mLexer.token()) != procedureNode->value.lowerValue)
            throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token());
    }

    ASTNode::addChild(procedureNode,blockNode);

    return procedureNode;
}

//-------------------------------------------------------------------------------------------------
NdaParser::ASTNodePtr NdaParser::parseWhileLoop()
{
    auto whileNode = std::make_shared<ASTNode>(ASTNodeType::WhileLoop, mLexer.line(), mLexer.column());
    if (!mLexer.nextToken())
        throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());

    auto condition = parseExpression();

    if (!condition) // hmm assert?
        throw NdaException(Nada::Error::UnexpectedStructure,mLexer.line(), mLexer.column(),mLexer.token());

    ASTNode::addChild(whileNode,condition);

    mLexer.nextToken();
    if (mLexer.token() != "loop")
        throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token());
    mLexer.nextToken();

    // 3. Parse den Block (Statements zwischen 'loop' und 'end loop')
    auto blockNode = std::make_shared<ASTNode>(ASTNodeType::Block, mLexer.line(), mLexer.column());
    ASTNode::addChild(whileNode,blockNode);

    while (mLexer.token() != "end") {
        auto nextStatement = parseStatement();
        if (nextStatement)
            ASTNode::addChild(blockNode,nextStatement);
        mLexer.nextToken();
    }
    mLexer.nextToken(); // Überspringe end 'loop'

    return whileNode;
}

//-------------------------------------------------------------------------------------------------
NdaParser::ASTNodePtr NdaParser::parseForLoop()
{
    auto forNode = std::make_shared<ASTNode>(ASTNodeType::ForLoop, mLexer.line(), mLexer.column());

    // consume "for"
    if (!mLexer.nextToken())
        throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());

    if (mLexer.tokenType() != NdaLexer::TokenType::Identifier)
        throw NdaException(Nada::Error::IdentifierExpected,mLexer.line(), mLexer.column(),mLexer.token());

    std::string loopVar = mLexer.token();

    if (!mLexer.nextToken())
        throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());

    if (mLexer.token() != "in")
        throw NdaException(Nada::Error::KeywordExpected,mLexer.line(), mLexer.column(),"in");

    if (!mLexer.nextToken())
        throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());

    auto iterableOrRangeNode = parseIterableOrRange();
    if (!iterableOrRangeNode)
        throw NdaException(Nada::Error::UnexpectedStructure,mLexer.line(), mLexer.column());

    mLexer.nextToken();
    if (mLexer.token() != "loop")
        throw NdaException(Nada::Error::KeywordExpected,mLexer.line(), mLexer.column(),"loop");

    mLexer.nextToken(); // Consume "loop"

    auto bodyNode = parseBlockEnd("end");
    if (!bodyNode)
        throw NdaException(Nada::Error::UnexpectedStructure,mLexer.line(), mLexer.column());

    if (mLexer.token() != "end")
        throw NdaException(Nada::Error::KeywordExpected,mLexer.line(), mLexer.column(),"end");
    mLexer.nextToken(); // Consume "end"

    if (mLexer.token() != "loop")
        throw NdaException(Nada::Error::KeywordExpected,mLexer.line(), mLexer.column(),"loop");

    // "loop" consumed by "parseSeparator()"

    forNode->value = loopVar;
    ASTNode::addChild(forNode,iterableOrRangeNode);
    ASTNode::addChild(forNode,bodyNode);

    return forNode;
}

//-------------------------------------------------------------------------------------------------
NdaParser::ASTNodePtr NdaParser::parseIfStatement()
{
    // Erwarte das Schlüsselwort "if"
    if (mLexer.token() != "if")
        throw NdaException(Nada::Error::KeywordExpected,mLexer.line(), mLexer.column(),"if");

    mLexer.nextToken(); // Consume "if"

    // 1. Parse die Bedingung
    auto conditionNode = parseExpression();
    if (!conditionNode) {
        throw NdaException(Nada::Error::UnexpectedStructure,mLexer.line(), mLexer.column());
    }

    // Erwarte "then"
    mLexer.nextToken();
    if (mLexer.token() != "then")
        throw NdaException(Nada::Error::KeywordExpected,mLexer.line(), mLexer.column(),"then");

    mLexer.nextToken(); // Consume "then"

    // Erstelle den IfStatement-Knoten
    auto ifNode = std::make_shared<ASTNode>(ASTNodeType::IfStatement, mLexer.line(), mLexer.column());
    ASTNode::addChild(ifNode,conditionNode);

    // 2. Parse den "then"-Block
    auto thenBlock = parseBlockEnd("elsif", "else");
    if (!thenBlock)
        throw NdaException(Nada::Error::UnexpectedStructure,mLexer.line(), mLexer.column());

    ASTNode::addChild(ifNode,thenBlock);

    // 3. Optional: Parse "elsif"-Blöcke
    while (mLexer.token() == "elsif") {
        mLexer.nextToken(); // Consume "elsif"
        auto elsifCondition = parseExpression();
        if (!elsifCondition) // assert?
            throw NdaException(Nada::Error::UnexpectedStructure,mLexer.line(), mLexer.column());

        mLexer.nextToken();
        if (mLexer.token() != "then")
            throw NdaException(Nada::Error::InvalidToken,mLexer.line(), mLexer.column(),mLexer.token());

        mLexer.nextToken(); // Consume "then"

        auto elsifBlock = parseBlockEnd("elsif", "else");
        if (!elsifBlock)
            throw NdaException(Nada::Error::UnexpectedStructure,mLexer.line(), mLexer.column());

        auto elsifNode = std::make_shared<ASTNode>(ASTNodeType::Elsif, mLexer.line(), mLexer.column());
        ASTNode::addChild(elsifNode,elsifCondition);
        ASTNode::addChild(elsifNode,elsifBlock);
        ASTNode::addChild(ifNode,elsifNode);
    }

    // 4. Optional: Parse "else"-Block
    if (mLexer.token() == "else") {
        mLexer.nextToken(); // Consume "else"

        auto elseBlock = parseBlockEnd("end");
        if (!elseBlock)
            throw NdaException(Nada::Error::UnexpectedStructure,mLexer.line(), mLexer.column());

        auto elseNode = std::make_shared<ASTNode>(ASTNodeType::Else, mLexer.line(), mLexer.column());
        ASTNode::addChild(elseNode,elseBlock);
        ASTNode::addChild(ifNode,elseNode);
    }

    // 5. Erwarte "end if"
    if (mLexer.token() != "end")
        throw NdaException(Nada::Error::KeywordExpected,mLexer.line(), mLexer.column(), "end");

    if (!mLexer.nextToken()) // Consume "end"
        throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column());

    if (mLexer.token() != "if")
        throw NdaException(Nada::Error::KeywordExpected,mLexer.line(), mLexer.column(), "if");
    return ifNode;
}

//-------------------------------------------------------------------------------------------------
NdaParser::ASTNodePtr NdaParser::parseCaseStatement()
{
    if (mLexer.token() != "case")
        throw NdaException(Nada::Error::KeywordExpected,mLexer.line(), mLexer.column(),"case");

    if (!mLexer.nextToken())
        throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());

    auto expressionNode = parseExpression();
    if (!expressionNode)
        throw NdaException(Nada::Error::UnexpectedStructure,mLexer.line(), mLexer.column(),mLexer.token());

    if (!mLexer.nextToken())
        throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());

    if (mLexer.token() != "is")
        throw NdaException(Nada::Error::KeywordExpected,mLexer.line(), mLexer.column(),"is");

    if (!mLexer.nextToken())
        throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());

    auto caseNode = std::make_shared<ASTNode>(ASTNodeType::CaseStatement, mLexer.line(), mLexer.column());
    ASTNode::addChild(caseNode,expressionNode);

    std::unordered_set<std::string> staticChoices;
    bool hasOthers = false;

    while (mLexer.token() == "when") {
        if (!mLexer.nextToken())
            throw NdaException(Nada::Error::UnexpectedEof,mLexer.line(), mLexer.column(),mLexer.token());

        auto whenNode = std::make_shared<ASTNode>(ASTNodeType::CaseWhen, mLexer.line(), mLexer.column(), mLexer.token());

        bool isOthers = mLexer.token() == "others";
        if (!isOthers) {
            auto choiceNode = parseExpression();
            if (!choiceNode)
                throw NdaException(Nada::Error::UnexpectedStructure,mLexer.line(), mLexer.column(),mLexer.token());

            std::string staticChoice;
            if (staticCaseChoiceKey(choiceNode,staticChoice)) {
                if (staticChoices.find(staticChoice) != staticChoices.end())
                    throw NdaException(Nada::Error::InvalidToken,choiceNode->line, choiceNode->column,choiceNode->value.displayValue);
                staticChoices.insert(staticChoice);
            }
